tests/invalid/tricky_assert1.err_exp
tricky_assert1.m:005: In interface for module `tricky_assert1':
tricky_assert1.m:005:   error: exported promise refers to predicate
tricky_assert1.m:005:   `tricky_assert1.local'/0 which is defined in the
tricky_assert1.m:005:   implementation section of module `tricky_assert1'.
tricky_assert1.m:005:   Either move the promise into the implementation section
tricky_assert1.m:005:   or move the definition into the interface.
